# evadb

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .ignored_words.txt  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  =4.5.4.60  CHANGELOG.md  CONTRIBUTING.md  Depth_Estimation_README.md  Dockerfile  FAISS_qdrant_index.index  FAISS_testIndex.index  Gemfile  Installation.md  Jenkinsfile  Jenkinsfile_weekly  Ludwig.ipynb  PredictEmployeeXgboost  PredictRentXgboost  README.md  README_UDF.md  README_alembic.md  RELEASING.md  Research.md  Steps_To_Add_New_Commands.md  WINDOWSREADME.md  _config.yml  alembic_automigration.py  baseline_query.profile  client_test.ipynb  client_test_plus.ipynb  constants.py  convert_instructions_to_pdf.py  db_api_example.py  docker-compose.yml  (+33 more)
.circleci/: config.yml
.devcontainer/: devcontainer.json
.githooks/: linker.sh  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
Grammar/: ANTLR.pdf.REMOVED.git-id  README.md
Graph_code_for_project/: CPU_GPU_graph.ipynb  No_cache_model.ipynb
MyVideo/: dummy.avi
_layouts/: default.html
_posts/: 2022-01-21-welcome-to-jekyll.markdown
_site/: 404.html  Installation.html  Research.html  db_api_example.py  docker-compose.yml  feed.xml  index.html
alembic/: env.py
api-docs/: Readme.md  _toc.yml  conf.py  generate_documentation.py  index.rst  requirements.txt
app/: README.md  app.py
clusters/: k_means.py  k_means_toy.py
compression/: .gitignore  CAE.py  Main.py  README.md  cluster.py  download_files.sh  load_data.py  preprocessing.py  train.py  write_data.py  write_frames.py
data/: README.md
dev/: Dockerfile  commands.sh  docker-run.sh  gpu-enabled.Dockerfile  requirements.txt
docker/: Dockerfile  eva_cpu.Dockerfile  eva_gpu.Dockerfile  eva_jenkins.Dockerfile  eva_jenkins2.Dockerfile  eva_overwrite.Dockerfile  eva_test.Dockerfile  eva_test_ubuntu.Dockerfile  jenkins.Dockerfile
docs/: .buildinfo  Makefile  README.md  Readme.md  Research.md  _config.yml  _toc.yml  catalog.rst  conf.py  genindex.html  index.html  index.markdown  index.rst  objects.inv  parser.rst  planner.rst  postgres_setup.md  py-modindex.html  requirements.txt  search.html  searchindex.js  storage.rst
eva/: README.md  __init__.py  constants.py  database.py  eva.yml  eva_cmd_client.py  eva_server.py  globals.py  sql_config.py  version.py
eva_db/: eva.db
evadb/: .coveragerc  .coveralls.yml  CHANGELOG.md  README.md  __init__.py  constants.py  database.py  error_manager.py  eva.yml  eva_cmd_client.py  eva_config.py  eva_server.py  evadb.yml  evadb_cmd_client.py  evadb_config.py  evadb_server.py  pytest.ini  version.py
evadb_data/: eva.db
evadb_venv/: pyvenv.cfg
experimentation/: depth_estimation_exp.ipynb
faster-rcnn.pytorch/: demo.py
faster_rcnn_pytorch/: .gitignore  demo.py  results.txt  results.txt.REMOVED.git-id  test_net.py  trainval_net.py
filters/: TaskManager.py  color_detection.py  filter.py  filter.py.bak  (+11 more)
(+3240 files in other folders)
