[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "numpy==1.20.1",
    "opencv-python==4.5.1.48",
    "scikit-learn==0.23.2",
    "pandas==1.2.3",
    "coveralls==3.0.1",
    "torch",
    "torchvision==0.8.2",
    "tensorflow",
    "tensorboard",
    "pillow",
    "sqlalchemy==1.3.20",
    "pymysql==0.10.1",
    "sqlalchemy-utils==0.36.6",
    "mock==4.0.3",
    "pytest-asyncio==0.14.0",
    "pyspark==3.0.2",
    "petastorm==0.9.8"
    ]
build-backend = "setuptools.build_meta"
