[metadata]
name = evatestdb
version = 0.0.3
author = Georgia Tech Database Group
author_email = svyalla3@gatech.edu
description = EVA is a visual data management system (think MySQL for videos).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/georgia-tech-db/eva
project_urls =
    Bug Tracker = https://github.com/georgia-tech-db/eva/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
