[metadata]
name = evatestdb
version = 0.0.26
author = Georgia Tech Database Group
author_email = arulraj@gatech.edu
description = EVA is a visual data management system (think MySQL for videos).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/georgia-tech-db/eva
project_urls =
    Bug Tracker = https://github.com/georgia-tech-db/eva/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    numpy==1.20.1
    opencv-python==4.5.1.48
    pandas==1.2.3
    torch==1.7.1
    torchvision==0.8.2
    Pillow==8.1.2
    sqlalchemy==1.3.20
    pymysql==0.10.1
    sqlalchemy-utils==0.36.6
    pyspark==3.0.2
    petastorm==0.9.8
    antlr4-python3-runtime==4.8
    pyyaml==5.1
    

[options.package_data]
eva = eva.yml

[options.entry_points]
console_scripts =
    eva_server = eva.eva_server:main
    eva_client=eva.eva_cmd_client:main

[options.packages.find]
exclude =
    test*
